--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^21.1.0",
     "prettier": "^2.8.4",
+    "tailwindcss": "^3.2.7",
     "vite": "^4.1.4",
     "vitest": "^0.29.1"
   }
